manifests/n2app-longhorn/templates/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-longhorn-service
spec:
  selector:
    app: hello-longhorn
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
